mSyncObject->Synchronize() in RenderCompositorANGLE::BeginFrame() is called when it is not necessary.
Categories
(Core :: Graphics, defect)
Tracking
()
| Tracking | Status | |
|---|---|---|
| firefox-esr115 | --- | unaffected |
| firefox122 | --- | wontfix |
| firefox123 | --- | wontfix |
| firefox124 | --- | fixed |
People
(Reporter: sotaro, Assigned: sotaro)
References
(Regression)
Details
(Keywords: regression)
Attachments
(1 file)
When RenderDXGITextureHost has keyed mutex, RenderDXGITextureHost::SyncObjectNeeded() should return false. But RenderDXGITextureHost::SyncObjectNeeded() return true. Then the Synchronize() is called when it is not necessary.
This is a regression from Bug 1866412.
| Assignee | ||
Updated•2 years ago
|
| Assignee | ||
Comment 1•2 years ago
|
||
Comment 2•2 years ago
|
||
Set release status flags based on info from the regressing bug 1866412
Updated•2 years ago
|
Comment 4•2 years ago
|
||
| bugherder | ||
Comment 5•2 years ago
|
||
The patch landed in nightly and beta is affected.
:sotaro, is this bug important enough to require an uplift?
- If yes, please nominate the patch for beta approval.
- If no, please set
status-firefox123towontfix.
For more information, please visit BugBot documentation.
| Assignee | ||
Comment 6•2 years ago
|
||
Comment on attachment 9379863 [details]
Bug 1880011 - RenderDXGITextureHost::SyncObjectNeeded()
Beta/Release Uplift Approval Request
- User impact if declined: mSyncObject->Synchronize() is called more than necessary. That increases a risk of Bug 1877726.
- Is this code covered by automated tests?: Yes
- Has the fix been verified in Nightly?: No
- Needs manual test from QE?: No
- If yes, steps to reproduce:
- List of other uplifts needed: none
- Risk to taking this patch: Low
- Why is the change risky/not risky? (and alternatives if risky): It just reduces unnecessary mSyncObject->Synchronize() call.
- String changes made/needed: none
- Is Android affected?: No
Comment 7•2 years ago
|
||
Comment on attachment 9379863 [details]
Bug 1880011 - RenderDXGITextureHost::SyncObjectNeeded()
Fx123 is in RC week now, moving over the request.
| Assignee | ||
Comment 8•2 years ago
|
||
Comment on attachment 9379863 [details]
Bug 1880011 - RenderDXGITextureHost::SyncObjectNeeded()
Cancel the request.
Updated•2 years ago
|
Description
•