Bug 1880011 - RenderDXGITextureHost::SyncObjectNeeded() r=gfx-reviewers,lsalzman

When RenderDXGITextureHost has keyed mutex, RenderDXGITextureHost::SyncObjectNeeded() should return false. But RenderDXGITextureHost::SyncObjectNeeded() return true. Then the Synchronize() is called when it is not necessary

Differential Revision: https://phabricator.services.mozilla.com/D201674